--- a/src/main/resources/assets/bvv/lang/en_us.json
+++ b/src/main/resources/assets/bvv/lang/en_us.json
@@ -1,5 +1,4 @@
 {
-  "enchantment.bvv.hh": "Hh",
-  "item.bvv.ieuyie": "1",
-  "block.bvv.power": "Power"
+  "item.bvv.ieuyie": "None",
+  "block.bvv.power": "Power(Creater test)"
 }
