--- a/src/main/resources/assets/dxd_project/lang/ru_ru.json
+++ b/src/main/resources/assets/dxd_project/lang/ru_ru.json
@@ -1,8 +1,8 @@
 {
   "block.dxd_project.power": "Power",
   "item.bvv.test_2": "Test 2",
+  "item.dxd_project.aakyam": "Aakyam",
   "item.bvv.ieuyie": "Красный дракон",
-  "item.dxd_project.ieuyie": "1",
   "block.bvv.power": "Питание(создан для тестов)",
   "item.dxd_project.test_2": "Test 2"
 }
