--- a/src/main/resources/assets/dxd_project/lang/en_us.json
+++ b/src/main/resources/assets/dxd_project/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "block.dxd_project.power": "Power",
   "item.bvv.test_2": "Test 2",
-  "item.dxd_project.aakyam": "Aakyam",
+  "item.dxd_project.test_1": "Test 1",
   "item.bvv.ieuyie": "1",
   "block.bvv.power": "Power",
   "item.dxd_project.test_2": "Test 2"
